--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 # ============================
-# 1) Build Stage (Installer)
+# 1) Build Stage
 # ============================
 FROM php:8.2-fpm AS build
 
@@ -21,17 +21,17 @@ RUN composer install --no-dev --optimize-autoloader --prefer-dist
 # ============================
 FROM php:8.2-fpm
 
-# Install system dependencies including nginx, supervisor, and gettext-base for envsubst
+# Install dependencies
 RUN apt-get update && apt-get install -y \
     nginx \
     supervisor \
+    curl \
     git \
     unzip \
     libpng-dev \
     libzip-dev \
     libonig-dev \
     libxml2-dev \
-    gettext-base \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # PHP extensions
@@ -40,33 +40,33 @@ RUN pecl install mongodb && docker-php-ext-enable mongodb
 
 WORKDIR /var/www/html
 
-# Copy application code
-COPY . .
+# Copy application
+COPY --chown=www-data:www-data . .
+COPY --from=build --chown=www-data:www-data /app/vendor ./vendor
 
-# Copy vendor from build stage
-COPY --from=build /app/vendor ./vendor
+# Set permissions
+RUN chmod -R 775 storage bootstrap/cache
 
-# Permissions
-RUN chown -R www-data:www-data /var/www/html \
-    && chmod -R 755 storage bootstrap/cache
+# Create directories
+RUN mkdir -p /var/log/supervisor /var/log/nginx /run/php
 
-# Create log directories
-RUN mkdir -p /var/log/supervisor /var/log/nginx
+# Remove default nginx config
+RUN rm -f /etc/nginx/sites-enabled/default /etc/nginx/sites-available/default
 
-# Nginx config template (will be processed by envsubst)
-RUN rm -f /etc/nginx/sites-enabled/default
+# Copy configs
 COPY ./deploy/nginx.conf /etc/nginx/conf.d/default.conf
-
-# Supervisor config
 COPY ./deploy/supervisor.conf /etc/supervisor/conf.d/supervisor.conf
+COPY ./deploy/start.sh /start.sh
 
-# Set default port
+RUN chmod +x /start.sh
+
+# Default port
 ENV PORT=8080
 
 EXPOSE ${PORT}
 
-# Start script
-COPY ./deploy/start.sh /start.sh
-RUN chmod +x /start.sh
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    CMD curl -f http://localhost:${PORT}/api/health || exit 1
 
 CMD ["/start.sh"]
