--- a/backend/deploy/nginx.conf
+++ b/backend/deploy/nginx.conf
@@ -1,11 +1,15 @@
 server {
-    listen ${PORT} default_server;
+    listen PORT_PLACEHOLDER default_server;
     server_name _;
     root /var/www/html/public;
 
     index index.php;
 
     charset utf-8;
+
+    # Increase timeouts
+    client_max_body_size 20M;
+    fastcgi_read_timeout 300;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -18,6 +22,7 @@ server {
 
     location ~ \.php$ {
         fastcgi_pass 127.0.0.1:9000;
+        fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
         fastcgi_hide_header X-Powered-By;
