--- a/backend/deploy/supervisor.conf
+++ b/backend/deploy/supervisor.conf
@@ -3,20 +3,23 @@ nodaemon=true
 user=root
 logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
+loglevel=info
 
 [program:php-fpm]
-command=/usr/local/sbin/php-fpm --nodaemonize
+command=/usr/local/sbin/php-fpm --nodaemonize --fpm-config /usr/local/etc/php-fpm.d/www.conf
 autostart=true
 autorestart=true
+priority=5
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:nginx]
-command=/bin/bash -c "envsubst '${PORT}' < /etc/nginx/conf.d/default.conf > /etc/nginx/conf.d/default.conf.tmp && mv /etc/nginx/conf.d/default.conf.tmp /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
+command=/usr/sbin/nginx -g 'daemon off;'
 autostart=true
 autorestart=true
+priority=10
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
